# root_rain

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md  install.sh  rr.sh  uninstall.sh
src/: PKGBUILD  README.md  lib.rs  main.rs
src/src/: main.rs
src/src/src/: Cargo.toml  PKGBUILD
