[package]
name = "root_rain"
version = "0.1.3"
edition = "2021"
authors = ["execrooted <execrooted@gmail.com>"]
description = "A colorful terminal weather animation tool written in Rust"
license = "MIT"
repository = "https://github.com/execrooted/root_rain"
readme = "README.md"
keywords = ["cli", "terminal", "root_rain", "weather", "aestetic", "animation", "cli"] 
categories = ["command-line-utilities", "weather", "aestetic", "nice", "animation", "cli"]   

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
rand = "0.8"
ctrlc = "3.4"


