[package]
name = "root_rain"
version = "0.1.3"
edition = "2021"
authors = ["execrooted <execrooted@gmail.com>"]
description = "A colorful animated weather simulation for the terminal — rain and snow effects with customizable speed, color, and style."
license = "MIT"
repository = "https://github.com/execrooted/root_rain"
homepage = "https://github.com/execrooted/root_rain"
readme = "README.md"
keywords = ["cli", "terminal", "weather", "animation", "aesthetic"]
categories = ["command-line-utilities", "visualization", "graphics", "simulation", "games"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
rand = "0.8"
ctrlc = "3.4"

[lib]
name = "root_rain"
path = "src/lib.rs"

[[bin]]
name = "root_rain"
path = "src/main.rs"


